# crash_margin

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
crashmargin/: __init__.py
crashmargin/data/: __init__.py  dataset.py  synthetic.py
crashmargin/explainability/: __init__.py  shap_explain.py
crashmargin/features/: __init__.py  graph.py  labels.py  margin.py  market.py  sentiment.py
crashmargin/margin/: __init__.py  dynamic_margin.py  policy_eval.py
crashmargin/model/: __init__.py  crashmargin.py  fusion.py  gat_encoder.py  margin_encoder.py  sentiment_encoder.py  tft_encoder.py
crashmargin/training/: __init__.py  losses.py  metrics.py  trainer.py
crashmargin/utils/: __init__.py  bootstrap.py
experiments/: run_ablation.py  run_classification.py  run_margin_eval.py  run_walkforward.py
scripts/: generate_figures.py
tests/: test_features.py  test_losses.py  test_margin.py  test_metrics.py  test_model.py
